[tool.poetry]
name = "dikicli"
version = "0.5.0"
description = "Commandline interface for diki.pl polish-english dictionary"
authors = ["Dawid Zych <dwd@mailo.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/silenc3r/dikicli"
repository = "https://github.com/silenc3r/dikicli"
keywords = ["diki", "dictionary"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Polish",
    "Operating System :: POSIX",
    "Topic :: Education"
]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = ">=4.8"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-vcr = ">=1.0.2"

[tool.poetry.scripts]
diki = "dikicli.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
