[tool.poetry]
name = "dikicli"
version = "0.6.0-dev"
description = "Commandline interface for diki.pl polish-english dictionary"
authors = ["Dawid Zych <dwd@mailo.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/silenc3r/dikicli"
repository = "https://github.com/silenc3r/dikicli"
keywords = ["diki", "dictionary"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Polish",
    "Operating System :: POSIX",
    "Topic :: Education"
]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = ">=4.8"
setuptools = "^75.8.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-vcr = ">=1.0.2"
notebook = "^7.3.2"

[tool.poetry.scripts]
diki = "dikicli.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
