[metadata]
name = dikicli
author = Dawid Zych
author-email = dawid.zych@yandex.com
summary = Commandline interface to diki.pl polish-english dictionary
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/silenc3r/dikicli
license = MIT
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: Polish
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Education

[files]
packages =
    dikicli

[entry_points]
console_scripts =
    diki = dikicli.cli:main
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain

[bdist_wheel]
universal = 1

[pbr]
skip_changelog = 1
skip_authors = 1

[flake8]
ignore = W503
max-line-length = 99
